crates/sui-prover/tests/snapshots/loop_invariant/issue-416.move.snap
---
source: crates/sui-prover/tests/integration.rs
assertion_line: 298
expression: output
---
exiting with verification errors
error: prover::ensures does not hold
    ┌─ tests/inputs/loop_invariant/issue-416.move:13:1
    │  
 13 │ ╭ fun bar_loop_inv(i: u64, stop: u64, v__3: &vector<u8>, v: &vector<u8>, r: &vector<u8>): bool {
 14 │ │     i <= stop && v__3.length() == stop - i && r == map_range!(v, 0, i, |x| flip(x))
 15 │ │         && !exists!(|j| more_loop_inv_3(*j, v, v__3))
 16 │ │ }
    │ ╰─^
    │  
    ┌─ /NORMALIZED_HOME/.move/https___github_com_asymptotic-code_sui_git_NORMALIZED/crates/sui-framework/packages/move-stdlib/sources/macros.move:180:12
    │
180 │     while (i < stop) {
    │            - loop invariant is not preserved by the loop body
    │
    =     at tests/inputs/loop_invariant/issue-416.move:23: bar_spec
